# archimaid-multi-agent-architecture-diagrams

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mcp.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
plot_agent/: __init__.py  agent.py  cli.py  eval.py  llm.py  memory.py  schemas.py  shape_registry.json  state.py
plot_agent/critic/: __init__.py  base.py  context_critic.py  global_critic.py  local_critic.py
plot_agent/data/: benchmarks.json
plot_agent/examples/: end_to_end.py  manual_ir_smoke.py
plot_agent/graph/: __init__.py  builder.py
plot_agent/graph/nodes/: __init__.py  mermaid_maker.py  mermaid_renderer.py  planner.py  reviewer.py  routing.py
plot_agent/graph/subgraphs/: __init__.py  executors.py
plot_agent/graph/subgraphs/roles/: __init__.py  _common.py  backend.py  data.py  devops.py  frontend.py  security.py
plot_agent/ir/: __init__.py  models.py
plot_agent/layout/: __init__.py  base.py  factory.py  graphviz_layout.py  simple_layout.py
plot_agent/mcp_server/: __init__.py  __main__.py  server.py
plot_agent/planners/: __init__.py  global_planner.py  local_planner.py  pipeline.py  task_planner.py
plot_agent/prompts/: __init__.py  critic_prompts.py  planner_prompts.py  refiner_prompts.py
plot_agent/refiner/: __init__.py  refiner.py  reflector.py
plot_agent/render/: __init__.py  drawio_renderer.py  png.py  png_exporter.py  styles.py
plot_agent/templates/: __init__.py  registry.py
plot_agent/tests/: test_pipeline_offline.py  test_reflection_mock.py
samples/: databricks_brd.txt
tests/: conftest.py  test_mermaid_ir.py  test_smoke.py
