[project]
name = "plot-agent"
version = "0.1.0"
description = "Hierarchical multi-agent architecture diagram generator. Turn natural language into draw.io diagrams with layered planning + VLM self-reflection."
authors = [
    { name = "Ruohan Xiong" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = [
    "diagram",
    "architecture-diagram",
    "drawio",
    "llm-agent",
    "mcp",
    "multi-agent",
    "flowchart",
    "vlm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.40,<2.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<15.0",
    "pillow>=10.0,<12.0",
]

[project.optional-dependencies]
# pygraphviz 需系统 graphviz (brew install graphviz / apt install graphviz-dev)
# 不装时会自动 fallback 到 SimpleGridLayout
graphviz = ["pygraphviz>=1.11,<2.0"]
# MCP server 暴露为 Cursor/IDE tool
mcp = ["mcp>=1.0,<2.0"]
# 一把梭
all = [
    "pygraphviz>=1.11,<2.0",
    "mcp>=1.0,<2.0",
]

[project.scripts]
plot-agent = "plot_agent.cli:main"
plot-agent-mcp = "plot_agent.mcp_server.server:run"
plot-agent-eval = "plot_agent.eval:main"

[project.urls]
Homepage = "https://github.com/LovHan/plot_agent"
Repository = "https://github.com/LovHan/plot_agent"
Documentation = "https://github.com/LovHan/plot_agent#readme"
Issues = "https://github.com/LovHan/plot_agent/issues"

# ---------- Poetry-specific ----------
[tool.poetry]
packages = [{ include = "plot_agent" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------- Dev tool configs ----------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line-too-long (由 formatter 管)
    "B008",  # default arg function call
]

[tool.ruff.lint.per-file-ignores]
"plot_agent/tests/*" = ["E501"]
# G / AGraph / pgv 都是 networkx / pygraphviz 社区长期约定, 不按 PEP8 小写
"plot_agent/layout/graphviz_layout.py" = ["N806", "N803"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
files = ["plot_agent"]

[tool.pytest.ini_options]
testpaths = ["plot_agent/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
